--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -306,8 +306,8 @@
   }
 }
 
-//*catalog
-.catalog {
+//*catalog-dropdown
+.catalog-dropdown {
   transform-origin: top;
   transform: rotateX(90deg);
   transition: transform 0.2s linear, opacity 0.3s linear;
