--- a/#src/scss/vars.scss
+++ b/#src/scss/vars.scss
@@ -9,6 +9,13 @@ $bg-black: #050402;
 $orange: #bb8c5f;
 $orange-dark: #524336;
 $bg: #eeeeee;
+$bg-card: #f5f5f5;
+$red: #eb5757;
+$yellow: #f2c94c;
+$green: #27ae60;
+$blue: #2f80ed;
+$pink: #ef5da8;
+$grey-dark: #333333;
 
 //fonts
 $forum: 'Forum', cursive;
