--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -85,6 +85,7 @@ body {
 @import 'blocks/contacts';
 @import 'blocks/socials';
 @import 'blocks/product-card';
+@import 'blocks/form';
 // @import "ui";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
 
@@ -92,6 +93,7 @@ body {
 @import 'header';
 @import 'footer';
 @import 'index';
+@import 'catalog';
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
