--- a/#src/scss/blocks/form.scss
+++ b/#src/scss/blocks/form.scss
@@ -36,112 +36,53 @@
 .checkbox {
   position: relative;
   cursor: pointer;
+  // padding-left: 20px;
   &--red {
-    .checkbox__text {
-      &::before {
-        border: 1px solid $red;
-        background-color: $red;
-      }
-      &:focus,
-      &:hover {
-        &::before {
-          border: 1px solid darken($color: $red, $amount: 10%);
-        }
-      }
-    }
-    .checkbox__input:checked + .checkbox__text::before {
+    .checkbox__box {
       background-color: $red;
-      border: 1px solid $red;
+    }
+    .checkbox__input:checked + .checkbox__box {
+      background-color: $red;
     }
   }
   &--yellow {
-    .checkbox__text {
-      &::before {
-        border: 1px solid $yellow;
-        background-color: $yellow;
-      }
-      &:focus,
-      &:hover {
-        &::before {
-          border: 1px solid darken($color: $yellow, $amount: 10%);
-        }
-      }
-    }
-    .checkbox__input:checked + .checkbox__text::before {
+    .checkbox__box {
       background-color: $yellow;
-      border: 1px solid $yellow;
+    }
+    .checkbox__input:checked + .checkbox__box {
+      background-color: $yellow;
     }
   }
   &--green {
-    .checkbox__text {
-      &::before {
-        border: 1px solid $green;
-        background-color: $green;
-      }
-      &:focus,
-      &:hover {
-        &::before {
-          border: 1px solid darken($color: $green, $amount: 10%);
-        }
-      }
-    }
-    .checkbox__input:checked + .checkbox__text::before {
+    .checkbox__box {
       background-color: $green;
-      border: 1px solid $green;
+    }
+    .checkbox__input:checked + .checkbox__box {
+      background-color: $green;
     }
   }
   &--blue {
-    .checkbox__text {
-      &::before {
-        border: 1px solid $blue;
-        background-color: $blue;
-      }
-      &:focus,
-      &:hover {
-        &::before {
-          border: 1px solid darken($color: $blue, $amount: 10%);
-        }
-      }
-    }
-    .checkbox__input:checked + .checkbox__text::before {
+    .checkbox__box {
       background-color: $blue;
-      border: 1px solid $blue;
+    }
+    .checkbox__input:checked + .checkbox__box {
+      background-color: $blue;
     }
   }
   &--pink {
-    .checkbox__text {
-      &::before {
-        border: 1px solid $pink;
-        background-color: $pink;
-      }
-      &:focus,
-      &:hover {
-        &::before {
-          border: 1px solid darken($color: $pink, $amount: 10%);
-        }
-      }
-    }
-    .checkbox__input:checked + .checkbox__text::before {
+    .checkbox__box {
       background-color: $pink;
-      border: 1px solid $pink;
+    }
+    .checkbox__input:checked + .checkbox__box {
+      background-color: $pink;
     }
   }
   &--grey-dark {
-    .checkbox__text {
-      &::before {
-        border: 1px solid $grey-dark;
-        background-color: $grey-dark;
-      }
-      &:focus,
-      &:hover {
-        &::before {
-          border: 1px solid darken($color: $grey-dark, $amount: 10%);
-        }
-      }
-    }
-    .checkbox__input:checked + .checkbox__text::before {
+    .checkbox__box {
       background-color: $grey-dark;
-      border: 1px solid $grey-dark;
+    }
+    .checkbox__input:checked + .checkbox__box {
+      background-color: $grey-dark;
     }
   }
   // .checkbox__input
@@ -154,62 +95,40 @@
     overflow: hidden;
     border: 0;
     clip: rect(0, 0, 0, 0);
-    clip-path: inset(100%);
-    &:checked + .checkbox__text::before {
+    /* Checked */
+    &:checked + .checkbox__box {
       background-color: $orange;
-      border: 1px solid $orange;
+      box-shadow: 0 0 0 1px $orange;
+      background-image: url(../../img/checkbox/check.svg);
     }
-    &:checked + .checkbox__text::after {
-      display: block;
+    /* Focused */
+    &:focus + .checkbox__box {
+      box-shadow: 0 0 0 1px $orange, 0 0 0 2px $orange-dark;
     }
-  }
-  // .checkbox__text
-  &__text {
-    position: relative;
-    padding-left: 40px;
-    &::before {
-      content: '';
-      display: inline-block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 20px;
-      height: 20px;
-      border: 1px solid $orange;
+    /* Disabled */
+    &:disabled + .checkbox__box {
+      box-shadow: 0 0 0 1px #9b9b9b;
+      background-color: $white;
     }
-    &::after {
-      content: '';
-      position: absolute;
-      top: 4px;
-      left: 3px;
-      display: none;
-      width: 14px;
-      height: 8px;
-      border-bottom: 2px solid #fff;
-      border-left: 2px solid #fff;
-      transform: rotate(-50deg);
-    }
-    &:focus,
-    &:hover {
-      &::before {
-        border: 1px solid $orange-dark;
-      }
+    &:checked:disabled + .checkbox__box {
+      background-color: #9b9b9b;
     }
   }
-  &--only {
+  // .checkbox__box
+  &__box {
+    // position: absolute;
     display: inline-block;
     width: 20px;
     height: 20px;
-    &.group-filter__label {
-      margin-bottom: 0;
-    }
-    .checkbox__text {
-      position: initial;
-      display: inline-block;
-      padding-left: 0;
-    }
+    // margin-left: -20px;
+    background-color: $white;
+    box-shadow: 0 0 0 1px $orange;
+  }
+  // .checkbox__text
+  &__text {
   }
 }
+
 .radio-button {
   position: relative;
   cursor: pointer;
@@ -234,15 +153,36 @@
     width: 100%;
     height: 100%;
   }
+  /* Checked */
   &:checked::before {
     background-color: $orange;
     width: 10px;
     height: 10px;
   }
+  /* Active */
   &:active::before {
     background-color: $orange;
     width: 12px;
     height: 12px;
+  }
+  /* Disabled */
+  &:disabled {
+    border: 2px solid #bdbdbd;
+    background-color: $white;
+    box-shadow: none;
+    &::before {
+      background-color: $white;
+    }
+  }
+  &:checked:disabled {
+    // border: 2px solid #bdbdbd;
+    // background-color: #bdbdbd;
+    // box-shadow: none;
+    &::before {
+      background-color: #bdbdbd;
+      width: 10px;
+      height: 10px;
+    }
   }
   &.error {
     border: 2px solid #bdbdbd;
@@ -264,6 +204,151 @@
     margin-right: 10px;
   }
 }
+
+.radio {
+  position: relative;
+  cursor: pointer;
+  // .radio__input
+  &__input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    /* Checked */
+    &:checked + .radio__box {
+      // background-color: $orange;
+      // box-shadow: 0 0 0 1px $orange;
+      &::before {
+        background-color: $orange;
+        width: 10px;
+        height: 10px;
+      }
+    }
+    /* Active */
+    &:active + .radio__box {
+      &::before {
+        background-color: $orange;
+        width: 12px;
+        height: 12px;
+      }
+    }
+    &:active:disabled + .radio__box {
+      &::before {
+        background-color: $white;
+      }
+    }
+    &:active:checked:disabled + .radio__box {
+      &::before {
+        background-color: #9b9b9b;
+      }
+    }
+    /* Focused */
+    &:focus + .radio__box {
+      box-shadow: 0 0 3px 0 $orange-dark;
+    }
+    /* Disabled */
+    &:disabled + .radio__box {
+      border: 2px solid #9b9b9b;
+      background-color: $white;
+      &:hover {
+        box-shadow: none;
+      }
+    }
+    /* не уверен что нужно, тк не знаю 
+    можно ли с клавиатуры переключатся 
+    с выключенного на работающий радио-баттон */
+    &:checked:disabled + .radio__box {
+      &::before {
+        background-color: #9b9b9b;
+        width: 10px;
+        height: 10px;
+      }
+    }
+  }
+  // .radio__box
+  &__box {
+    position: relative;
+    // position: absolute;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    // margin-left: -20px;
+    background-color: $white;
+    border: 2px solid $orange;
+    // box-shadow: 0 0 0 2px $orange;
+    border-radius: 50%;
+    color-adjust: exact;
+    transition: box-shadow 0.1s linear;
+    &:hover {
+      box-shadow: 0 0 2px 0 $orange;
+    }
+    &::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  /* Checked */
+  // &:checked::before {
+  //   background-color: $orange;
+  //   width: 10px;
+  //   height: 10px;
+  // }
+  /* Active */
+  &:active::before {
+    background-color: $orange;
+    width: 12px;
+    height: 12px;
+  }
+  /* Disabled */
+  &:disabled {
+    border: 2px solid #bdbdbd;
+    background-color: $white;
+    box-shadow: none;
+    &::before {
+      background-color: $white;
+    }
+  }
+  &:checked:disabled {
+    // border: 2px solid #bdbdbd;
+    // background-color: #bdbdbd;
+    // box-shadow: none;
+    &::before {
+      background-color: #bdbdbd;
+      width: 10px;
+      height: 10px;
+    }
+  }
+  // &.error {
+  //   border: 2px solid #bdbdbd;
+  //   background-color: $white;
+  //   box-shadow: none;
+  //   &::before {
+  //     background-color: $white;
+  //   }
+  // }
+  // &.inactive {
+  //   border: 2px solid #bdbdbd;
+  //   background-color: #bdbdbd;
+  //   box-shadow: none;
+  //   &::before {
+  //     background-color: #bdbdbd;
+  //   }
+  // }
+  // &--offset-right {
+  //   margin-right: 10px;
+  // }
+}
+
 /* The switch - the box around the slider */
 .switch {
   position: relative;
